--- a/pubilc/index.html
+++ b/pubilc/index.html
@@ -158,6 +158,7 @@
 	<script src="code4.js" crossorigin="anonymous"></script>
 	<script src="code5.js" crossorigin="anonymous"></script>
 	<script src="code6.js" crossorigin="anonymous"></script>
+	<script src="code7.js" crossorigin="anonymous"></script>
 	<script src="data.js" crossorigin="anonymous"></script>
 
 
